@@ -172,6 +172,48 @@ public final class DataObjectAOImpl extends FileCatalogObjectAOImpl implements
 
 	}
 
+	/* (non-Javadoc)
+	 * @see org.irods.jargon.core.pub.DataObjectAO#findById(int)
+	 */
+	@Override
+	public DataObject findById(final int id) throws FileNotFoundException,
+			JargonException {
+
+		log.info("findById() with id:{}", id);
+		IRODSGenQueryBuilder builder = new IRODSGenQueryBuilder(true, null);
+
+		dataAOHelper.buildSelects(builder);
+
+		builder.addConditionAsGenQueryField(RodsGenQueryEnum.COL_D_DATA_ID,
+				QueryConditionOperators.EQUAL, String.valueOf(id));
+
+		IRODSQueryResultSet resultSet = null;
+		try {
+			IRODSGenQueryFromBuilder irodsQuery = builder
+					.exportIRODSQueryFromBuilder(this.getJargonProperties()
+							.getMaxFilesAndDirsQueryMax());
+			resultSet = irodsGenQueryExecutor.executeIRODSQueryAndCloseResult(
+					irodsQuery, 0);
+
+		} catch (JargonQueryException e) {
+			log.error("query exception for query", e);
+			throw new JargonException("error in query for data object", e);
+		} catch (GenQueryBuilderException e) {
+			log.error("query exception for query", e);
+			throw new JargonException("error in query for data object", e);
+		}
+
+		if (resultSet.getFirstResult() == null) {
+			log.error("no data object data found for id:{}", id);
+			throw new FileNotFoundException(
+					"no data object data found in iCAT for id");
+		}
+
+		return DataAOHelper.buildDomainFromResultSetRow(resultSet
+				.getFirstResult());
+
+	}
+
 	/*
 	 * (non-Javadoc)
 	 * 
@@ -2733,9 +2775,8 @@ public final class DataObjectAOImpl extends FileCatalogObjectAOImpl implements
 			IRODSGenQueryFromBuilder irodsQuery = builder
 					.exportIRODSQueryFromBuilder(this.getJargonProperties()
 							.getMaxFilesAndDirsQueryMax());
-			resultSet = irodsGenQueryExecutor
-					.executeIRODSQueryAndCloseResultInZone(irodsQuery, 0,
-							objStat.getOwnerZone());
+			resultSet = irodsGenQueryExecutor.executeIRODSQueryAndCloseResult(
+					irodsQuery, 0);
 
 			for (IRODSQueryResultRow row : resultSet.getResults()) {
 				userFilePermissions
