@@ -1,5 +1,5 @@
 package org.irods.jargon.core.utils;
 public final class JargonVersion {
- public static String VERSION="3.3.0";
- public static String BUILD_TIME="20130304-1537";
+ public static String VERSION="3.3.1-SNAPSHOT";
+ public static String BUILD_TIME="20130307-0838";
 }
