@@ -745,6 +745,54 @@ public class DataObjectAOImplTest {
 		Assert.assertNotNull("null data object, was not found", dataObject);
 
 	}
+	
+	@Test
+	public void testFindById() throws Exception {
+		// generate a local scratch file
+		String testFileName = "testFindById.dat";
+		String absPath = scratchFileUtils
+				.createAndReturnAbsoluteScratchPath(IRODS_TEST_SUBDIR_PATH);
+		String localFileName = FileGenerator
+				.generateFileOfFixedLengthGivenName(absPath, testFileName, 1);
+
+		String targetIrodsFile = testingPropertiesHelper
+				.buildIRODSCollectionAbsolutePathFromTestProperties(
+						testingProperties, IRODS_TEST_SUBDIR_PATH + '/'
+								+ testFileName);
+		// now put the file
+		IRODSAccount irodsAccount = testingPropertiesHelper
+				.buildIRODSAccountFromTestProperties(testingProperties);
+		DataTransferOperations dto = irodsFileSystem.getIRODSAccessObjectFactory().getDataTransferOperations(irodsAccount);
+
+		dto.putOperation(localFileName, targetIrodsFile, "", null, null);
+
+		DataObjectAO dataObjectAO = irodsFileSystem
+				.getIRODSAccessObjectFactory().getDataObjectAO(irodsAccount);
+
+		DataObject dataObject = dataObjectAO
+				.findByAbsolutePath(targetIrodsFile);
+		
+		DataObject actual = dataObjectAO.findById(dataObject.getId());
+		
+		Assert.assertNotNull("null data object, was not found", actual);
+
+	}
+	
+	@Test(expected=DataNotFoundException.class)
+	public void testFindByIdNotFound() throws Exception {
+		// generate a local scratch file
+	
+		// now put the file
+		IRODSAccount irodsAccount = testingPropertiesHelper
+				.buildIRODSAccountFromTestProperties(testingProperties);
+	
+		DataObjectAO dataObjectAO = irodsFileSystem
+				.getIRODSAccessObjectFactory().getDataObjectAO(irodsAccount);
+
+		dataObjectAO
+				.findById(999999999);
+
+	}
 
 	@Test
 	public void testFindByAbsolutePath() throws Exception {
